--- a/ignisApp/Backend/package.json
+++ b/ignisApp/Backend/package.json
@@ -1,11 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts"
+    "dev": "node --loader ts-node/esm index.ts"
   },
   "keywords": [],
   "author": "",
