--- a/ignisApp/Backend/.env
+++ b/ignisApp/Backend/.env
@@ -1,3 +1,3 @@
-# Exemplo de conexão com MongoDB Atlas
-MONGO_URI=mongodb+srv://github-actions-user:<HK9xGvsPh5G4NLjF>@cluster0.mongodb.net/?retryWrites=true&w=majority
-``
+PORT=5000
+MONGO_URI=MONGO_URI=mongodb+srv://github-actions-user:OxPzQuiCblKAJpwu@cluster0.9mqjvvj.mongodb.net/ignisDB?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=Teste
