--- a/ignisApp/Backend/.env
+++ b/ignisApp/Backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=MONGO_URI=mongodb+srv://github-actions-user:OxPzQuiCblKAJpwu@cluster0.9mqjvvj.mongodb.net/ignisDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://github-actions-user:GLwSif4uNcUkforP@cluster0.9mqjvvj.mongodb.net/ignisDB?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=Teste
