--- a/ignisApp/package.json
+++ b/ignisApp/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
