--- a/ignisApp/package.json
+++ b/ignisApp/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
