--- a/ignisApp/package.json
+++ b/ignisApp/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^5.0.4",
+    "baseline-browser-mapping": "^2.9.6",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
